[gd_scene load_steps=4 format=2]

[ext_resource path="res://ReusableUI/CrewDetailCard.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Themes/DataText.tres" type="Theme" id=3]

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1420.0
margin_bottom = -780.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="VBox"]
margin_right = 500.0
margin_bottom = 31.0
text = "{ FILL NAME }"
align = 1

[node name="Vitals" type="HBoxContainer" parent="VBox"]
margin_top = 35.0
margin_right = 500.0
margin_bottom = 99.0

[node name="TextureRect" type="TextureRect" parent="VBox/Vitals"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="Left" type="VBoxContainer" parent="VBox/Vitals"]
margin_left = 68.0
margin_right = 218.0
margin_bottom = 64.0
alignment = 1

[node name="Health" type="HBoxContainer" parent="VBox/Vitals/Left"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 30.0

[node name="Bar" type="ProgressBar" parent="VBox/Vitals/Left/Health"]
self_modulate = Color( 0.247059, 0.964706, 0.262745, 1 )
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="VBox/Vitals/Left/Health/Bar"]
margin_left = 2.0
margin_top = -0.568802
margin_right = 151.0
margin_bottom = 25.4312
theme = ExtResource( 3 )
text = "{ XX / XX }"
align = 1

[node name="Morale" type="HBoxContainer" parent="VBox/Vitals/Left"]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 59.0

[node name="Bar" type="ProgressBar" parent="VBox/Vitals/Left/Morale"]
self_modulate = Color( 0.898039, 0.917647, 0.00784314, 1 )
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
value = 100.0
percent_visible = false

[node name="Label2" type="Label" parent="VBox/Vitals/Left/Morale/Bar"]
margin_left = 1.5688
margin_top = -0.679214
margin_right = 150.569
margin_bottom = 25.3208
theme = ExtResource( 3 )
text = "{ XX / XX }"
align = 1

[node name="Right" type="VBoxContainer" parent="VBox/Vitals"]
margin_left = 222.0
margin_right = 500.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_constants/separation = -8
alignment = 1

[node name="Armor" type="HBoxContainer" parent="VBox/Vitals/Right"]
margin_right = 278.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/Vitals/Right/Armor"]
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 0 )
text = "Armor :"

[node name="ArmorName" type="Label" parent="VBox/Vitals/Right/Armor"]
margin_left = 74.0
margin_right = 278.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "{ XX }"
align = 1

[node name="Weapons" type="HBoxContainer" parent="VBox/Vitals/Right"]
margin_top = 18.0
margin_right = 278.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/Vitals/Right/Weapons"]
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 0 )
text = "Weapons :"

[node name="WeaponNames" type="Label" parent="VBox/Vitals/Right/Weapons"]
margin_left = 74.0
margin_right = 278.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "{ XX }"
align = 1

[node name="Equipment" type="HBoxContainer" parent="VBox/Vitals/Right"]
margin_top = 36.0
margin_right = 278.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/Vitals/Right/Equipment"]
margin_top = 1.0
margin_right = 70.0
margin_bottom = 27.0
rect_min_size = Vector2( 70, 0 )
text = "Equipment :"

[node name="EquipmentNames" type="Label" parent="VBox/Vitals/Right/Equipment"]
margin_left = 74.0
margin_right = 278.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "{ XX }"
align = 1

[node name="Bottom" type="HBoxContainer" parent="VBox"]
margin_top = 103.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="Traits" type="VBoxContainer" parent="VBox/Bottom"]
margin_right = 248.0
margin_bottom = 197.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/Bottom/Traits"]
margin_right = 248.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Traits & Resists"
align = 1

[node name="Panel" type="Panel" parent="VBox/Bottom/Traits"]
margin_top = 30.0
margin_right = 248.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="Traits" type="VBoxContainer" parent="VBox/Bottom/Traits/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Right" type="VBoxContainer" parent="VBox/Bottom"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 197.0
size_flags_horizontal = 3

[node name="StatusEffectLabel" type="Label" parent="VBox/Bottom/Right"]
margin_right = 248.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Status Effects"
align = 1

[node name="StatusEffectPanel" type="Panel" parent="VBox/Bottom/Right"]
margin_top = 30.0
margin_right = 248.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="StatusEffects" type="GridContainer" parent="VBox/Bottom/Right/StatusEffectPanel"]
margin_left = 7.15002
margin_top = 4.84998
margin_right = 474.15
margin_bottom = 74.85
grow_horizontal = 0
rect_scale = Vector2( 0.5, 0.5 )
columns = 6

[node name="TextureRect" type="TextureRect" parent="VBox/Bottom/Right/StatusEffectPanel/StatusEffects"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VBox/Bottom/Right/StatusEffectPanel/StatusEffects"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="VBox/Bottom/Right/StatusEffectPanel/StatusEffects"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="VBox/Bottom/Right/StatusEffectPanel/StatusEffects"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="PerkLabel" type="Label" parent="VBox/Bottom/Right"]
margin_top = 78.0
margin_right = 248.0
margin_bottom = 104.0
theme = ExtResource( 3 )
text = "Buffs & Debuffs"
align = 1

[node name="BuffPanel" type="Panel" parent="VBox/Bottom/Right"]
margin_top = 108.0
margin_right = 248.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="Buffs" type="VBoxContainer" parent="VBox/Bottom/Right/BuffPanel"]
margin_top = 4.0
margin_right = 248.0
margin_bottom = 124.0
size_flags_horizontal = 3
